fix: keep musical dots always visible and remove competing CSS transitions

--- a/src/css/Lyrics/Mixed.css
+++ b/src/css/Lyrics/Mixed.css
@@ -261,29 +261,14 @@
  */
 
 #SpicyLyricsPage .LyricsContainer .LyricsContent .line.musical-line {
-  transition: scale 0.25s ease-in-out, position 0.25s ease-in-out;
-  position: absolute;
+  position: relative;
   transform-origin: center center;
   margin: 0;
 }
 
-#SpicyLyricsPage .LyricsContainer .LyricsContent .line.musical-line.Active {
-  position: relative;
-  margin: -1.38cqw 0;
-}
-
-#SpicyLyricsPage .LyricsContainer .LyricsContent[data-lyrics-type="Line"] .line.musical-line.Active {
-  margin: -0.8cqw 0 !important;
-}
-
 #SpicyLyricsPage .LyricsContainer .LyricsContent .line.musical-line .dotGroup {
-  scale: 0;
-  transition: all 0.25s ease-in-out;
-  transform-origin: center center;
-}
-
-#SpicyLyricsPage .LyricsContainer .LyricsContent .line.musical-line.Active .dotGroup {
   scale: 1;
+  transform-origin: center center;
 }
 
 
@@ -319,7 +304,6 @@
   --font-size: calc(var(--DefaultLyricsSize)*1.3);
   --opacity-size: .2;
   border-radius: 50%;
-  transition: all ease-in 0.3s;
   scale: 0.75;
   font-size: var(--font-size);
   opacity: var(--opacity-size);
